tests/expectations/compiler/const_generics/const_generic_shadowing_fail.out
Error [EAST0372017]: The name `N` is defined multiple times.
    --> compiler-test:8:18
     |
   7 |       const N: u32 = 5;
     |             ^ previous definition of `N` here
   8 |       inline foo::[N: u32]() {}
     |                    ^ `N` redefined here
